# cover-me

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  cover-me  install.sh  jd.txt  pyproject.toml  requirements.txt
config/: config.yaml  professional_info.md  system_prompt.md
cover_me/: __init__.py  cover_letter.py  exceptions.py  main.py  pdf_generator.py
cover_me/cli/: __init__.py  configure.py  generate.py  profile.py  setup.py  test.py
cover_me/config/: __init__.py  manager.py
cover_me/defaults/: profile.md
cover_me/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
cover_me/utils/: clipboard.py
defaults/: config.yaml  profile.md  system_prompt.md
output/: .gitkeep
src/: cover_letter.py  main.py  pdf_generator.py
src/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/utils/: __init__.py  clipboard.py
templates/: default_template.html  modern_template.html
