[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cover-me"
version = "1.0.0"
description = "Generate professional cover letters using AI"
authors = [{name = "Amish Kushwaha", email = "amishkushwaha59@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cover-letter", "ai", "job-application", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=60.0",
    "pyperclip>=1.8.0",
    "click>=8.0",
]

[project.scripts]
cover-me = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/cover-me"
Repository = "https://github.com/yourusername/cover-me"
Issues = "https://github.com/yourusername/cover-me/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]